Notebooks improvements: more exercises added, more theory, etc.

--- a/notebooks/nb_92_MinariOverview.ipynb
+++ b/notebooks/nb_92_MinariOverview.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,36 +12,30 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -80,26 +75,27 @@
     "register_grid_envs()\n",
     "\n",
     "render_mode = RenderMode.RGB_ARRAY_LIST if os.environ.get(\"DISPLAY\") else None"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\"> Minari Overview </div>"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Minari overview\n",
-    "\n",
+    "# Minari overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "Unfortunately not supported in windows (maybe mainly because of Mujoco dependency)\n",
@@ -128,19 +124,14 @@
     "2 - **[Mujoco](https://github.com/google-deepmind/mujoco)**\n",
     "\n",
     "MuJoCo, short for Multi-Joint dynamics with Contact, is a versatile physics engine designed to support research and development across various fields, including robotics, bio-mechanics, graphics, animation, machine learning, and more. Originally created by Robotic LLC, it was later acquired by DeepMind and made freely accessible to the public in October 2021. Furthermore, it was open-sourced in May 2022."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## Exercise I"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "### Exercise I"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,14 +272,14 @@
    "source": [
     "Now, using our suboptimal policy, we will proceed to collect data and generate a custom Minari dataset.\n",
     "\n",
-    "But first, let's give a look to the [Minari documentation](https://minari.farama.org/main/content/basic_usage/)."
+    "Give a look to [Minari documentation](https://minari.farama.org/main/content/basic_usage/) if needed."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise II"
+    "### Exercise II"
    ]
   },
   {
@@ -377,8 +368,8 @@
     "\n",
     "state_action_count_data, _ = \\\n",
     "    get_state_action_data_and_policy_grid_distributions(data, env)\n",
-    "\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\")\n",
+    "new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\",new_keys_for_state_action_count_plot=new_keys)\n",
     "snapshot_env(env)"
    ]
   },
@@ -386,14 +377,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The distribution makes sense. From states 40 to 64 (i.e., (5,0) to (7,7)), our policy doesn't collect any data, neither around the obstacle."
+    "The distribution makes sense. From states (5,0) to (7,7), our policy doesn't collect any data, neither around the obstacle."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References\n",
+    "## References\n",
     "\n",
     "[ \\[Fu.Justin et. al.\\] D4RL: Datasets for Deep Data-Driven Reinforcement Learning](https://arxiv.org/abs/2004.07219)\n",
     "\n",
@@ -410,9 +401,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "training_rl",
    "language": "python",
-   "name": "python3"
+   "name": "training_rl"
   },
   "language_info": {
    "codemirror_mode": {
@@ -424,7 +415,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
