--- a/notebooks/nb_94_Offline_RL_part_I.ipynb
+++ b/notebooks/nb_94_Offline_RL_part_I.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-27T12:16:45.684290Z",
+     "start_time": "2024-03-27T12:16:44.697667Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,42 +17,236 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-27T12:16:45.693628Z",
+     "start_time": "2024-03-27T12:16:45.685192Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-27T12:16:45.702168Z",
+     "start_time": "2024-03-27T12:16:45.694649Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\"> Offline RL Part I </div>"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,9 +270,10 @@
     "\n",
     "<img src=\"_static/images/offline_RL_3.jpg\" alt=\"offline_rl_1\" style=\"height:400px;\">\n",
     "\n",
-    "As shown in the figure above on the right, once you are out of distribution (o.o.d) (states $s$ and $s'$ in red in the figure), as you don't have any feedback it will be hard to come back to $D$, as the o.o.d errors will propagate. As we will see this is one of the main challenges of offline RL and there are different techniques to mitigate this wrong behavior.\n",
+    "As shown in the figure above on the right, once you are out of distribution (o.o.d) (states $s$ and $s'$ in red in the figure), as you don't have any feedback it will be hard to come back to $D$, as the o.o.d errors will propagate. As we will see this is one of the main challenges of offline RL and there are different techniques to mitigate this wrong behavior. As we saw before in an imitation learning approach you don't have a way to correct \n",
+    "this missbehavior unless you have an expert that provides some feedback as we did in the DAGGER example. \n",
     "\n",
-    "The o.o.d. issues are not the only distributional shift effect in offline RL.\n",
+    "**The o.o.d. issues are not the only distributional shift effect in offline RL**.\n",
     "After computing the optimal policy, it typically operates within a subset of the original dataset distribution, creating a distinct form of distributional shift (D' subset in green in the figure below). Evaluating a policy substantially different from the behavior policy reduces the effective sample size (from D to D'), resulting in increased variance in the estimates. In simpler terms, the limited number of data points may not accurately represent the true data distribution. \n",
     "\n",
     "<img src=\"_static/images/offline_RL_2.jpg\" alt=\"offline_rl_2\" style=\"height:400px;\">\n",
@@ -99,7 +300,7 @@
     "$$ Q^\\pi(s, a) = \\mathbb{E}_\\pi \\left[ r_0 + \\gamma r_1 + \\gamma^2 r_2 + \\ldots \\mid s_0 = s, a_0 = a \\right]\n",
     "$$\n",
     "\n",
-    "<img src=\"_static/imagesq_value_iterative.png\" alt=\"offline_rl\" style=\"height:200px;\">\n",
+    "<img src=\"_static/images/q_value_iterative.png\" alt=\"offline_rl\" style=\"height:200px;\">\n",
     "\n",
     "\n",
     "DQN is a simple method to reach the optimal policy by iteratively compute:\n",
@@ -144,26 +345,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observe that in an offline setup we restrict the states $s$, $s'$ and $a$ to belong to the dataset, $D$, but the action $a'$ sampled from the policy $\\pi_k$ in the evaluation step could be outside. If we don't have enough information around the state $s'$ (as is typically the case in offline RL) the uncertainty about those states could make $\\pi_k(a'|s')$ select actions not covered in $D$ and this error will propagate in the evaluation iteration process. In online RL such an overestimation will be fixed through exploration but this not an option in offline methods. **This is perhaps the most important distributional shift issue that suffers offline RL, as already mentioned in the introduction.**\n",
+    "As we can see, from the (Evaluation) step, the only place where could be o.o.d is when we compute the action $a'$ as all the other values $s$, $a$ and $s'$ are taken from the dataset $D$. \n",
     "\n",
-    "Note: We could have also DNN function approximation errors that could also produce overestimation of actions bringing the system to out of distribution data."
+    "\n",
+    "<img src=\"_static/images/94_dqn_ood_case.png\" alt=\"offline_rl\" style=\"height:40%\">\n",
+    "\n",
+    "\n",
+    "However if the o.o.d. action $a'=a'_4$ in the figure above, is the one that maximizes $Q(s',a')$ this will give us a policy $\\pi(s') = argmax_a Q(s',a)$ with probability one to go o.o.d, i.e., into the state $s''$, that we shouldn't visit. The same holds if your policy is not deterministic and you will have a non-zero probability to jump to the state $s''$. If this happens, during inference we will have the possibility to move to the state $s''$ where we will need to compute $\\pi(s'') = argmax_a Q(s'',a)$, but as $Q(s'',a)$  is a  Q-value that didn't appear during training we will have an unpredicte behavior as the policy doesn't have a clue about what to do and how to bring us to in-distribution states again. Note that this is similar to the situation we observed in the imitation learning approach. In the figure below we can see how bad is the overestimation of the Q-values for the offpolicy Soft Actor Critic (SAC) algorithm on the half-cheetah environment:\n",
+    "\n",
+    "\n",
+    "<img src=\"_static/images/94_offpolicy_Q_values_overestimation.png\" alt=\"offline_rl\" style=\"height:30%\">\n",
+    "\n",
+    "\n",
+    "In online RL such an overestimation will be fixed through exploration but this is not an option in offline methods. **This is perhaps the most important distributional shift issue that suffers offline RL, as already mentioned in the introduction.**\n",
+    "\n",
+    "**Note 1: We could do the evaluation step with the behavioral policy directly (for instance by getting it from BC on the dataset) to learn $Q^\\beta(s,a)$ and after that get the optimal policy with the standard policy improvement. However this is shown to be out from optimal as if your data contains a fair amount of suboptimal data the $Q^\\beta(s,a)$ will be far from optimal and so the optimal policy associated to it.**\n",
+    "\n",
+    "Note 2: We could have also DNN function approximation errors that could also produce overestimation of actions bringing the system to out of distribution data --> Explain this point better!! (TODO ---> There is a whole paper talking about this)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TODO or not TODO ?????? \n",
+    "\n",
     "**EXERCISE II in nb95**: Another desired property of offline RL, as discussed in the open source RL dataset section, is to reuse pieces of trajectories from different datasets in order to create an optimal one for the task in question!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   }
  ],
  "metadata": {
@@ -182,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
