--- a/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
+++ b/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
@@ -3,6 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:12:17.451999Z",
+     "start_time": "2024-04-09T16:12:16.443733Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,41 +17,51 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:12:18.209514Z",
+     "start_time": "2024-04-09T16:12:18.199068Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:12:18.897136Z",
+     "start_time": "2024-04-09T16:12:18.882164Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:12:37.628132Z",
+     "start_time": "2024-04-09T16:12:19.382783Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%autoreload\n",
     "\n",
+    "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
+    "load_env_variables()\n",
     "\n",
     "import os\n",
     "import warnings\n",
@@ -63,7 +79,6 @@
     "    Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper)\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    create_combined_minari_dataset\n",
-    "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import \\\n",
     "    offpolicy_rendering\n",
     "from training_rl.offline_rl.offline_policies.policy_registry import PolicyName\n",
@@ -79,8 +94,6 @@
     "from training_rl.offline_rl.visualizations.utils import (\n",
     "    get_state_action_data_and_policy_grid_distributions, snapshot_env)\n",
     "\n",
-    "\n",
-    "load_env_variables()\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "register_grid_envs()\n",
     "\n",
@@ -89,39 +102,35 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<img src=\"_static/images/aai-institute-cover.svg\" alt=\"Snow\" style=\"width:100%;\">\n",
     "<div class=\"md-slide title\"> Offline RL distributional shift exercises </div>"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Off-Policy Distributional Shift"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Distributional Shift I:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise I:\n",
+    "# Off-Policy Distributional Shift - I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise I:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this exercise we have two datasets that tries to bring the agent from (3,0) to (7,7) .\n",
     "\n",
-    "In this exercise we have two datasets that tries to bring the agent from (3,0) to (7,7) . One policy is suboptimal and the other is optimal.\n",
+    "<img src=\"_static/images/nb_95_env_image_1.png\" alt=\"grid environment configuration\" style=\"height:400px;\">\n",
+    "\n",
+    "One policy is suboptimal and the other is optimal.\n",
     "\n",
     "I  - **Suboptimal expert policy**:  collect ~ 8000 steps\n",
     "\n",
@@ -152,20 +161,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**SOLUTION:**"
+    "### **SOLUTION:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Environment"
+    "#### Create the environment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:12:54.210464Z",
+     "start_time": "2024-04-09T16:12:54.107118Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -189,18 +203,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configure the two datasets"
+    "#### Configure and rendering policies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:13:12.623694Z",
+     "start_time": "2024-04-09T16:13:12.607653Z"
+    }
+   },
    "outputs": [],
    "source": [
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
+    "# ToDo: CHANGE !!!!!!!!!\n",
+    "#BEHAVIOR_POLICY_I = BehaviorPolicyType.random\n",
     "DATA_SET_IDENTIFIER_I = \"_suboptimal\"\n",
-    "NUM_STEPS_I = 8000\n",
+    "# TODO: CHANGE !!!!!!!\n",
+    "NUM_STEPS_I = 100000\n",
     "\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_expert\"\n",
@@ -208,40 +230,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create Minari combined datasets \n",
-    "( give a look to **create_combined_minari_dataset(...)** ) "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config_combined_data = create_combined_minari_dataset(\n",
-    "        env_name=ENV_NAME,\n",
-    "        dataset_names = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
-    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
-    "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
-    "        combined_dataset_identifier = \"combined_data_sets_random_walk\",\n",
-    "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Rendering behavioral policy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:13:15.165099Z",
+     "start_time": "2024-04-09T16:13:13.044646Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Suboptimal policy\n",
@@ -250,7 +246,7 @@
     "    render_mode=render_mode,\n",
     "    behavior_policy_name=BEHAVIOR_POLICY_I,\n",
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
-    "    num_frames=100,\n",
+    "    num_frames=1000,\n",
     ")"
    ]
   },
@@ -274,13 +270,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's give a look to the state-action distribution"
+    "#### Create single Minari dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "( give a look to **create_combined_minari_dataset(...)** ) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:13:20.614814Z",
+     "start_time": "2024-04-09T16:13:17.327554Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "config_combined_data = create_combined_minari_dataset(\n",
+    "        env_name=ENV_NAME,\n",
+    "        dataset_identifiers = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
+    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
+    "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
+    "        combined_dataset_identifier = \"combined_data_sets_random_walk\",\n",
+    "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### check state-action distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:13:23.980999Z",
+     "start_time": "2024-04-09T16:13:21.495025Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#Create Buffers with minari datasets\n",
@@ -300,13 +336,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choose the policy to train"
+    "#### offline policy training"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:20:43.643397Z",
+     "start_time": "2024-04-09T16:20:43.629838Z"
+    }
+   },
    "outputs": [],
    "source": [
     "POLICY_NAME = PolicyName.dqn\n",
@@ -322,28 +363,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:31:16.966025Z",
+     "start_time": "2024-04-09T16:28:52.960343Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run the training\n",
     "\n",
-    "NUM_EPOCHS = 20\n",
+    "NUM_EPOCHS = 4\n",
     "BATCH_SIZE = 128\n",
     "STEP_PER_EPOCH = 0.1*data_size\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
-    "EXPLORATION_NOISE = True\n",
-    "SEED = None #1626\n",
     "\n",
     "\n",
     "offline_training(\n",
@@ -356,16 +393,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:31:16.967266Z",
+     "start_time": "2024-04-09T16:31:16.967165Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ToDo: Delete or not delete ???\n",
+    "\n",
+    "from training_rl.offline_rl.online_trainings.online_training import online_training\n",
+    "from training_rl.offline_rl.offline_policies.policy_registry import PolicyType\n",
+    "\n",
+    "online_training(\n",
+    "    trained_policy_config = offline_policy_config,\n",
+    "    policy_type = PolicyType.offpolicy,\n",
+    "    num_epochs=1,\n",
+    "    batch_size=64,\n",
+    "    restore_training=False,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Restore policy"
+    "### Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Restore policy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:31:19.928380Z",
+     "start_time": "2024-04-09T16:31:19.911411Z"
+    }
+   },
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy_best_reward.pth\"\n",
@@ -383,13 +457,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's visualize the policy"
+    "#### Policy visualization"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-09T16:31:25.927977Z",
+     "start_time": "2024-04-09T16:31:22.224214Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#env_2D_grid_initial_config.obstacles = OBSTACLE.obst_free_8x8\n",
@@ -406,16 +485,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### State-action distribution policy distribution"
+    "#### State-action policy distribution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "NUM_EPISODES = 100 # as more episodes the better\n",
@@ -488,15 +576,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## Distributional Shift II:"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "# Off-Policy Distributional Shift - II"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Exercise I\n",
     "\n",
@@ -515,23 +602,19 @@
     "In this example we will use again as off-policy RL algorithm, the Deep Q-Network (DQN) algorithm.\n",
     "\n",
     "**Let's setup our configuration and create the environment**"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Environment"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
@@ -549,23 +632,19 @@
     "\n",
     "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=render_mode), env_config=env_2D_grid_initial_config)\n",
     "snapshot_env(env)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Configure the two datasets"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATA_SET_IDENTIFIER_I = \"_downwards_\"\n",
@@ -575,23 +654,19 @@
     "DATA_SET_IDENTIFIER_II = \"_optimal_\"\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "NUM_STEPS_II = 1000"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Create combined Minari dataset"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
@@ -602,23 +677,19 @@
     "        combined_dataset_identifier = \"_stiching\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Rendering behavioral policy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Suboptimal policy\n",
@@ -630,14 +701,12 @@
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=1000,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Expert policy\n",
@@ -648,23 +717,19 @@
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=1000,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### State-action distribution"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name_combined_dataset = config_combined_data.data_set_name\n",
@@ -678,23 +743,19 @@
     "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.012))\n",
     "\n",
     "snapshot_env(env)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Policy to train"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "POLICY_NAME = PolicyName.dqn\n",
@@ -707,23 +768,19 @@
     "    render_mode=render_mode,\n",
     "    device=\"cpu\"\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Training"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run the training\n",
@@ -733,8 +790,6 @@
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
-    "EXPLORATION_NOISE = True\n",
-    "SEED = None #1626\n",
     "\n",
     "\n",
     "offline_training(\n",
@@ -744,23 +799,19 @@
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
     "    restore_training=False,\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Restore policy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy_best_reward.pth\"\n",
@@ -772,23 +823,19 @@
     "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
     "policy.load_state_dict(torch.load(os.path.join(log_path, POLICY_FILE), map_location=\"cpu\"))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Let's visualize the policy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "offpolicy_rendering(\n",
@@ -799,32 +846,25 @@
     "    num_frames=1000,\n",
     "    imitation_policy_sampling=False\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Questions:\n",
     "\n",
     "1 - What do you notice? What happens if you increase the expert data? Is it better?\n",
     "\n",
     "2 - Try again with the BCQ algorithm."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   }
  ],
  "metadata": {
@@ -843,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -854,9 +894,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "283px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
