--- a/notebooks/nb_90_IntroOfflineRL.ipynb
+++ b/notebooks/nb_90_IntroOfflineRL.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-16T17:57:00.726151Z",
+     "start_time": "2023-12-16T17:56:59.841417Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,44 +17,205 @@
     "%matplotlib inline\n",
     "%load_ext training_rl\n",
     "%set_random_seed 12"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-16T17:56:59.841417Z",
-     "end_time": "2023-12-16T17:57:00.726151Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-16T17:57:02.243879Z",
+     "start_time": "2023-12-16T17:57:02.213509Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-16T17:57:02.213509Z",
-     "end_time": "2023-12-16T17:57:02.243879Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-16T17:57:03.983204Z",
+     "start_time": "2023-12-16T17:57:03.965114Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_latex_macros"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-12-16T17:57:03.965114Z",
-     "end_time": "2023-12-16T17:57:03.983204Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,12 +227,10 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Introduction to Offline Reinforcement Learning"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,23 +326,20 @@
     "    2. Differences between approaches like imitation learning and online vs. offline RL, \n",
     "       and what we can adapt from online methods for the offline setting.\n",
     "\n",
-    "       \n",
     "    3. Standard data collection approaches and libraries used in the offline RL \n",
     "       community"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Benchmarking\n",
     "\n",
     "In most cases, offline RL methods typically train a policy with specific hyperparameters for a fixed number of steps. They then assess their quality by using the policy from the last iteration in an online evaluation. We will follow this approach in this workshop as it will allow us to focus on understanding concepts rather than fine-tuning optimization.\n",
     "\n",
     "However, it's worth noting that alternative methods in the realm of offline RL, known as **Offline Policy Evaluation (OPE)**, exist. These approaches aim to evaluate policy performance directly from the data without any interaction with the environment, which can be a realistic scenario. Although we won't delve into these methods in detail, it's important to acknowledge their existence. **It's worth noting that these methods are still considered somewhat unreliable, and there is ongoing progress in this area**."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References\n",
+    "## References\n",
     "\n",
     "[ Levine et al. '2021 - Offline Reinforcement Learning: Tutorial, Review,\n",
     "and Perspectives on Open Problems ](https://arxiv.org/pdf/2005.01643.pdf).\n",
@@ -236,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -249,7 +411,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
