--- a/notebooks/nb_75_EnvironmentEngineering.ipynb
+++ b/notebooks/nb_75_EnvironmentEngineering.ipynb
@@ -509,7 +509,7 @@
    "source": [
     "class ScalarObservation(ABC):\n",
     "    \"\"\"\n",
-    "    Base class for observations based on greyscale images, e.g. as provided by ScanningEMEnv\n",
+    "    Base class for observations based on greyscale images\n",
     "    \"\"\"\n",
     "\n",
     "    @property\n",
